Add stanford header/footer and WIP styles

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,6 +33,16 @@
       crossorigin="anonymous"
     />
 
+    <link
+      href="https://www-media.stanford.edu/su-identity/css/su-identity.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+
     <title>T-orders</title>
   </head>
 
@@ -40,7 +50,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
