Add more styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,9 +23,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Raleway|Roboto+Slab"
+      href="https://fonts.googleapis.com/css?family=Crimson+Text|Source+Sans+Pro|Source+Serif+Pro"
       rel="stylesheet"
     />
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -36,11 +37,6 @@
     <link
       href="https://www-media.stanford.edu/su-identity/css/su-identity.css"
       rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"
-      rel="stylesheet"
-      type="text/css"
     />
 
     <title>T-orders</title>
