Make front-end more responsive WIP

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,22 +23,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css?family=Crimson+Text|Source+Sans+Pro|Source+Serif+Pro"
+      href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow|Roboto"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-
     <link
       href="https://www-media.stanford.edu/su-identity/css/su-identity.css"
       rel="stylesheet"
     />
-
     <title>T-orders</title>
   </head>
 
