Hide optimization method from UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,7 +36,7 @@
       href="https://www-media.stanford.edu/su-identity/css/su-identity.css"
       rel="stylesheet"
     />
-    <title>T-orders</title>
+    <title>CoGeTo</title>
   </head>
 
   <body>
